<resources>
    <string name="app_name">七牛直播Demo</string>
    <string name="title_player">播放</string>
    <string name="title_stream">推流</string>
    <string name="title_tip">详情</string>

    <string name="action_settings">Settings</string>

    <string name="choose_ok">OK</string>
    <string name="input_title">Input Url:</string>
    <string name="back_title">BACK</string>
    <string name="change_title">Change</string>
    <string name="buffering">Buffering</string>
    <string name="title_activity_audio_player">AudioPlayerActivity</string>
    <string name="choose_video">Video</string>
    <string name="choose_audio">Audio</string>

    <string name="live_streaming">直播</string>
    <string name="playback">点播</string>

    <string name="play_setting">播放设置</string>
    <string name="decode_config">解码配置</string>
    <string name="sw_decode">软解</string>
    <string name="hw_decode">硬解</string>
    <string name="auto_decode">自动</string>

    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>

    <string name="pls_choose_activity">[请选择测试 Activity]:</string>
    <string name="pls_choose_videopath">[输入或选择视频地址]:</string>
    <string name="pls_choose_setting">[请选择播放配置]:</string>
    <string name="input_video_path">手动输入测试视频地址</string>
    <string name="btn_local_file">本地文件</string>
    <string name="btn_play_setting">播放配置</string>
    <string name="btn_click_play">点击播放</string>

    <string name="btn_start">开始</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_resume">继续</string>
    <string name="btn_stop">停止</string>


    <string name="failed_to_start_streaming">无法成功开启直播 ！</string>
    <string name="failed_to_start_conference">无法成功开启连麦，错误码：</string>

    <string name="start_streaming">开始直播</string>
    <string name="stop_streaming">停止直播</string>

    <string name="start_conference">开始连麦</string>
    <string name="stop_conference">结束连麦</string>

    <string name="mirror_success">镜像成功</string>

    <string name="streaming_stopping">正在停止...</string>
    <string name="ready">就绪</string>>
    <string name="streaming">直播中...</string>
    <string name="preparing">准备中...</string>
    <string name="disconnected">连接断开</string>
    <string name="stream_state_not_ready">当前不在就绪状态，不能开启直播 ！</string>

    <string name="prepare_title">准备直播</string>
    <string name="prepare_tips">请稍等，直播准备中...</string>

    <string name="failed_open_camera">无法打开摄像头 !</string>
    <string name="failed_open_microphone">无法打开麦克风 !</string>
    <string name="failed_to_publish_av_to_rtc">无法发布视频到房间, 错误码：</string>
    <string name="mute_must_in_streaming_status">必须开始连麦或者推流后才能静音 !</string>

    <string name="success_publish_video_to_rtc">成功发布视频到房间 !</string>
    <string name="success_publish_audio_to_rtc">成功发布音频到房间 !</string>

    <string name="io_error">网络连接错误 !</string>
    <string name="network_disconnected">网络连接断开 !</string>

    <string name="user_join_conference">其他用户加入连麦 !</string>
    <string name="user_leave_conference">其他用户离开连麦 !</string>

    <string name="engine_not_initialized">引擎未初始化 </string>
    <string name="not_join_room">没有加入房间 ！</string>
    <string name="join_room_failed">无法加入房间，错误码：</string>
    <string name="failed_to_connect_rtc_server">无法连接RTC服务器 ！</string>
    <string name="user_join_other_where">用户在其它地方登录 ！</string>
    <string name="user_kickout_by_host">您被主持人踢出房间 ！</string>

    <string name="pls_input_room_name">请输入房间名称 ！</string>
    <string name="server_not_configure">请先开发服务器端，配置好相关地址</string>

    <string name="button_capture">截  帧</string>
    <string name="button_preview_mirror">镜像(预览)</string>
    <string name="button_encoding_mirror">镜像(编码)</string>
    <string name="button_log_stats">打印统计信息</string>
    <string name="button_mute_speaker">静音(远端)</string>
    <string name="button_unmute_speaker">取消静音(远端)</string>
    <string name="button_subscribe">订阅视频</string>
    <string name="button_unsubscribe">取消订阅</string>
    <string name="button_adjust_bitrate">调整码率</string>

    <string name="others_muted">已静音其他人</string>
    <string name="others_unmuted">已取消静音其他人</string>
    <string name="others_fail">开始连麦后才能静音</string>

    <string name="log_stats_failed">无法获取统计信息</string>
    <string name="button_mixed_callback_enable">打印合流回调</string>
    <string name="button_mixed_callback_disable">取消打印合流回调</string>

    <string name="cd_shutter_button">cd_shutter_button</string>


    <string name="string_state_ready">READY</string>
    <string name="string_state_ioerror">IOERROR</string>
    <string name="string_state_preparing">PREPARING</string>
    <string name="string_state_connecting">CONNECTING</string>
    <string name="string_state_streaming">STREAMING</string>
    <string name="string_state_netblocking">NETBLOCKING, STOPPING</string>
    <string name="string_state_con_timeout">CONNECTION TIMEOUT</string>
    <string name="title_activity_audio_streaming">AudioStreamingActivity</string>
    <string name="string_sdk_tip">SDK信息</string>
    <string name="string_sdk_description">播放器SDK : PLDroidPlayer \n\n版本号 : v2.0.0 \n\n推流SDK : PLDroidMediaStreaming\n\n版本号 : v2.2.2.1</string>
    <string name="string_compile_tip">编译信息</string>
    <string name="string_down_tip">SDK下载地址</string>
    <string name="string_down_url">https://github.com/pili-engineering</string>

    <string name="title_about">关于</string>

    <string name="tip_correct_roomid">请输入正确的房间号！</string>
    <string name="toast_save_roomid">房间号已保存！</string>
    <string name="tip_save">提示：由房间号生成的推流和播放链接有效时长为1小时！</string>

    <string name="play_scan_cancel">扫码取消</string>
    <string name="play_input_url_tip">请输入正确的播放地址!</string>
    <string name="play_choose_video_tip">选择要导入的视频</string>

    <string name="stream_camera_config">采集配置</string>
    <string name="stream_water_mark_config">水印配置</string>
    <string name="stream_push_config">推流配置</string>


    <string name="stream_input_url_tip">请输入正确的推流地址!</string>
    <string name="stream_input_roomid_tip">推流配置</string>
    <string name="config_manu_forcus">手动对焦</string>
    <string name="config_auto_forcus">自动对焦(picture)</string>
    <string name="config_inner_beauty">内置美颜</string>
    <string name="config_front_camera">前置摄像头</string>
    <string name="config_camera_setting">摄像头设置:</string>
    <string name="config_preview_rate">预览比例:</string>
    <string name="config_small">小</string>
    <string name="config_big">大</string>
    <string name="config_back_camera">后置摄像头</string>
    <string name="config_mid">中</string>
    <string name="config_forcus_setting">对焦设置:</string>
    <string name="config_preview_size">预览尺寸:</string>
    <string name="config_focus_video">自动对焦(Video)</string>
    <string name="_16_9">16:9</string>
    <string name="_4_3">4:3</string>
    <string name="config_265_encoding">265软编</string>
    <string name="_1000">1000</string>
    <string name="_30">30</string>
    <string name="_48">48</string>
    <string name="_480">480</string>
    <string name="_848">848</string>
    <string name="config_fps">FPS:</string>
    <string name="config_height">Height:</string>
    <string name="config_width">Width:</string>
    <string name="config_close">关闭</string>
    <string name="config_open">开启</string>
    <string name="config_mkfb">最大关键帧率:</string>
    <string name="config_bitrate">码率:</string>
    <string name="config_bitrate_primary">码率优先</string>
    <string name="config_hw">硬编</string>
    <string name="config_encode_size">编码尺寸:</string>
    <string name="config_encode_control">编码控制:</string>
    <string name="config_encoding_type">编码方式:</string>
    <string name="config_custom_adjust">自动适应码率:</string>
    <string name="config_custom">自定义</string>
    <string name="config_video_quality">视频质量:</string>
    <string name="config_quality_primary">质量优先</string>
    <string name="config_sw">软编</string>
    <string name="config_preset">预设</string>
    <string name="config_defult">默认</string>
    <string name="config_is_open">是否开启:</string>
    <string name="config_water_size">水印尺寸:</string>
    <string name="config_water_location">水印方位:</string>
    <string name="config_water_alpha">水印透明度：</string>
    <string name="play_open_local">打开本地文件</string>
    <string name="play_scan">扫描二维码</string>
    <string name="play_type">播放方式:</string>
    <string name="play_vod">点播</string>
    <string name="play_gen_by_roomid">由房间号生成</string>
    <string name="play_live">直播</string>
    <string name="play_cache">离线缓存(只支持mp4点播)</string>
    <string name="play_decoding">解码方式:</string>
    <string name="play_input_url">输入播放地址(或房间号):</string>
    <string name="stream_gen_by_roomid">由房间号生成</string>
    <string name="stream_input_url">输入推流地址(或房间号):</string>

</resources>
