<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/PlayFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:tint="@android:color/background_light"
        app:backgroundTint="?attr/colorPrimary"
        app:elevation="3dp"
        app:rippleColor="@android:color/holo_blue_light"
        app:srcCompat="@android:drawable/ic_media_play" />


    <ProgressBar
        android:id="@+id/PlayURLProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/PlayURLEditView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:hint="@string/play_input_url"
                android:singleLine="true" />

            <Button
                android:id="@+id/PlayURLGenBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:singleLine="true"
                android:text="@string/play_gen_by_roomid"
                android:theme="@style/ButtonStyle" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/play_decoding"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/DecodeTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/RadioSWDecode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sw_decode" />

            <RadioButton
                android:id="@+id/RadioHWDecode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/hw_decode" />

            <RadioButton
                android:id="@+id/RadioAutoDecode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/auto_decode" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/play_type"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/PlayerTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/RadioPlayLive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/play_live" />

            <RadioButton
                android:id="@+id/RadioPlayVOD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/play_vod" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/CacheCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/play_cache" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/PlayLocalBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/play_open_local"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorBlack"
                android:theme="@style/ButtonStyle" />

            <Button
                android:id="@+id/PlayScanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/play_scan"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorBlack"
                android:theme="@style/ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>